force-app/main/default/objects/Employee__c/fields/Aadhar_Card__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_Card__c</fullName>
    <inlineHelpText>Enter Aadhar Card Number</inlineHelpText>
    <label>Aadhar Card</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>