force-app/main/default/objects/Employee__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <inlineHelpText>Enter Address information</inlineHelpText>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>