force-app/main/default/objects/Employee__c/fields/License_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Number__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Provide License Number</inlineHelpText>
    <label>License Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>