force-app/main/default/objects/Employee__c/fields/Phone_Numer__c.field-meta.xml
<CustomField>
    <fullName>Phone_Numer__c</fullName>
    <inlineHelpText>Enter the phone number</inlineHelpText>
    <label>Phone Numer</label>
    <type>Phone</type>
</CustomField>