force-app/main/default/objects/Employee__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <inlineHelpText>Select the region in pick list</inlineHelpText>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bengulore</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Hyderbad</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>New Delhi</fullName>
            </value>
            <value>
                <fullName>Secundrabad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>