force-app/main/default/objects/Employee__c/fields/Secondary_Phone__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Phone__c</fullName>
    <inlineHelpText>Enter secondary Phone number</inlineHelpText>
    <label>Secondary Phone</label>
    <type>Phone</type>
</CustomField>