force-app/main/default/objects/Employee__c/fields/SSN_NO__c.field-meta.xml
<CustomField>
    <fullName>SSN_NO__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Enter SSN Number</inlineHelpText>
    <label>SSN NO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>